# Data-Compression-Tool

./: CMakeLists.txt  Decompression.cpp  Decompression.h  FrequencyAnalysis.cpp  HuffmanTree.cpp  HuffmanTree.h  Main  README.MD  README.md  live_com_decom  sample_Decompression.txt
include/: CLIInterface.h  CodeGeneration.h  Compression.h  FileIO.h  FrequencyAnalysis.h  HuffmanTreeSerialization.h
src/: CLIInterface.cpp  CodeGeneration.cpp  Compression.cpp  FileIO.cpp  HuffmanTreeSerialization.cpp  Main.cpp
tmp/: old_main.cc
